--- a/style.css
+++ b/style.css
@@ -148,6 +148,7 @@ section{
     text-transform: uppercase;
     font-size: 20px
 }
+/******/
 
 
 .home{
@@ -191,6 +192,22 @@ header.sticky{
     background: transparent;
     backdrop-filter: blur(35px);
 }
+
+/* ABOUT US DESIGN*/
+.about-text h5{
+    color: #59ff43;
+    font-size: 50px;
+    text-decoration: underline;
+}
+
+.about-text p{
+    text-decoration: none;
+    padding-top: 30px;
+    color: var(--text-color);
+    font-size: var(--p-font);
+}
+
+
 
 
 /* RESPONSIVE DESIGN */
