--- a/style.css
+++ b/style.css
@@ -202,13 +202,68 @@ header.sticky{
 
 .about-text p{
     text-decoration: none;
-    padding-top: 30px;
+    padding-top: 20px;
     color: var(--text-color);
     font-size: var(--p-font);
 }
 
+.role-item{
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, auto));
+    align-items: center;
+    gap: 2.2rem;
+    text-align: center;
+    margin-top: 4rem;
+}
 
+.role-box{
+    padding: 45px 30px;
+    background: rgb(12, 14, 11);
+    border-radius: 0.8rem;
+    border: 1px solid transparent;
+    cursor: pointer;
+    transition: all ease .50s;
+}
 
+.role-box i{
+    font-size: 50px;
+    color: var(--main-color);
+    margin-bottom: 10px;
+}
+
+.role-box h3{
+    font-size: 23px;
+    font-weight: 700;
+    margin-bottom: 12px;
+}
+
+.role-box p{
+    font-size: var(--p-font);
+    line-height: 30px;
+    margin-bottom: 1.5rem;
+}
+
+.s-btnn{
+    display: inline-block;
+    padding: 9px 24px;
+    background: green;
+    color: var(--text-color);
+    font-size: 15px;
+    font-weight: 500;
+    border-radius: 2rem;
+    transition: all ease .30s;
+}
+
+.s-btnn:hover{
+    transform: scale(1.1);
+    background: transparent;
+    border: 2px solid var(--main-color);
+}
+
+.role-box:hover{
+    transform: translateY(-8px);
+    border: 1px solid #4e5055;
+}
 
 /* RESPONSIVE DESIGN */
 @media (max-width: 1700px){
