--- a/style.css
+++ b/style.css
@@ -272,7 +272,13 @@ header.sticky{
 }
 
 #gen_btn{
-    margin-left: 70px;
+    margin-left: 45px;
+    padding: 5px 10px;
+    background: var(--main-color);
+    color: var(--bg-color);
+    font-size: 20px;
+    border: 2px solid transparent;
+    border-radius: 10px;
 }
 
 #map{
@@ -288,6 +294,10 @@ header.sticky{
     width: 500px;
     height: auto;
 }
+
+/* #result{
+
+} */
 
 
 /* RESPONSIVE DESIGN */
